k8s/deployment.quiz-ui.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: quiz-ui
  labels:
    app: quiz-ui
    rel: stable

spec:
  replicas: 3
  selector:
    matchLabels:
      app: quiz-ui
      rel: stable
  
  template:
    metadata:
      labels:
        app: quiz-ui
        rel: stable
        ver: '0.1'
    spec:
      containers:
      - name: quiz-ui
        image: jbetoreyes/quiz-ui:0.1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
