k8s/service.quiz-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-ui
spec:
  selector:
    app: quiz-ui
    rel: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
